--- a/index.ipynb
+++ b/index.ipynb
@@ -37,10 +37,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {
         "id": "vjShZQvFTyav",
-        "outputId": "96d53734-fb68-48bf-8a1b-ecd10f44d127",
+        "outputId": "76e859f7-5f65-4ae3-c551-95dec0eeb731",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,10 +81,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {
         "id": "leURneA8Tyaw",
-        "outputId": "d36ce526-e1d2-46cf-ea26-15ef01456739",
+        "outputId": "335bd65d-ce67-4876-957b-6c12db69a6d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -115,7 +115,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 16
         }
       ],
       "source": [
@@ -138,10 +138,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 17,
       "metadata": {
         "id": "dQnDnjImTyax",
-        "outputId": "b2d30ef8-0ae9-4d0d-ea2f-a37407840a13",
+        "outputId": "41d6c18f-28b7-4285-d1d9-00ca2f3689f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 19,
       "metadata": {
         "id": "AxIlhAPBTyay"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 21,
       "metadata": {
         "id": "MYXWaMkITyaz"
       },
@@ -281,10 +281,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "id": "5IjpKynPTya0",
-        "outputId": "ade72839-83b7-4f9c-c923-c9ae81f877d0",
+        "outputId": "0b47edcc-9e24-48e3-ea72-c98b00f536d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 22
         }
       ],
       "source": [
@@ -377,17 +377,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "HFQ6xsUDTya1"
       },
       "outputs": [],
       "source": [
-        "stopwords_list = None\n",
-        "stopwords_list += None\n",
-        "stopwords_list += None\n",
+        "stopwords_list = stopwords.words('english')\n",
+        "stopwords_list += list(string.punctuation)\n",
+        "stopwords_list += [str(x) for x in range(0,10)]\n",
         "\n",
-        "macbeth_words_stopped = None"
+        "macbeth_words_stopped = [x for x in macbeth_tokens if x not in stopwords_list]"
       ]
     },
     {
@@ -403,13 +403,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "PIhYi3XVTya1"
+        "id": "PIhYi3XVTya1",
+        "outputId": "8090f52f-29ac-4af5-bc43-9570f69a02f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('macb', 137),\n",
+              " ('haue', 122),\n",
+              " ('thou', 87),\n",
+              " ('enter', 81),\n",
+              " ('shall', 68),\n",
+              " ('macbeth', 62),\n",
+              " ('thee', 61),\n",
+              " ('vpon', 58),\n",
+              " ('macd', 58),\n",
+              " ('yet', 57),\n",
+              " ('thy', 56),\n",
+              " ('vs', 55),\n",
+              " ('come', 54),\n",
+              " ('king', 54),\n",
+              " ('hath', 52),\n",
+              " ('good', 49),\n",
+              " ('rosse', 49),\n",
+              " ('lady', 48),\n",
+              " ('would', 47),\n",
+              " ('time', 46),\n",
+              " ('like', 43),\n",
+              " ('say', 39),\n",
+              " ('doe', 38),\n",
+              " ('lord', 38),\n",
+              " ('make', 38),\n",
+              " ('tis', 37),\n",
+              " ('must', 36),\n",
+              " ('done', 35),\n",
+              " ('selfe', 35),\n",
+              " ('ile', 35),\n",
+              " ('feare', 35),\n",
+              " ('let', 35),\n",
+              " ('man', 34),\n",
+              " ('wife', 34),\n",
+              " ('night', 34),\n",
+              " ('banquo', 34),\n",
+              " ('well', 33),\n",
+              " ('know', 33),\n",
+              " ('one', 32),\n",
+              " ('great', 31),\n",
+              " ('see', 31),\n",
+              " ('may', 31),\n",
+              " ('exeunt', 30),\n",
+              " ('speake', 29),\n",
+              " ('sir', 29),\n",
+              " ('lenox', 28),\n",
+              " ('mine', 26),\n",
+              " ('vp', 26),\n",
+              " ('th', 26),\n",
+              " ('mal', 25)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
       "source": [
-        "macbeth_stopped_freqdist = None\n",
+        "macbeth_stopped_freqdist = FreqDist(macbeth_words_stopped)\n",
         "macbeth_stopped_freqdist.most_common(50)"
       ]
     },
@@ -434,12 +498,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
-        "id": "vw-Rx6HLTya2"
+        "id": "vw-Rx6HLTya2",
+        "outputId": "d5d96a10-0c2e-48ea-bb7c-f0b21d73a0d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3441"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ],
+      "source": [
+        "len(macbeth_stopped_freqdist)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -456,17 +537,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "giejZKseTya2"
+        "id": "giejZKseTya2",
+        "outputId": "bf5a89a8-3700-4f9d-bca7-4fc01418ac23",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Word       Normalized Frequency\n",
+            "macb             0.01354       \n",
+            "haue             0.01206       \n",
+            "thou             0.008601      \n",
+            "enter            0.008008      \n",
+            "shall            0.006723      \n",
+            "macbeth          0.00613       \n",
+            "thee             0.006031      \n",
+            "vpon             0.005734      \n",
+            "macd             0.005734      \n",
+            "yet              0.005635      \n",
+            "thy              0.005536      \n",
+            "vs               0.005437      \n",
+            "come             0.005339      \n",
+            "king             0.005339      \n",
+            "hath             0.005141      \n",
+            "good             0.004844      \n",
+            "rosse            0.004844      \n",
+            "lady             0.004745      \n",
+            "would            0.004647      \n",
+            "time             0.004548      \n",
+            "like             0.004251      \n",
+            "say              0.003856      \n",
+            "doe              0.003757      \n",
+            "lord             0.003757      \n",
+            "make             0.003757      \n",
+            "tis              0.003658      \n",
+            "must             0.003559      \n",
+            "done             0.00346       \n",
+            "selfe            0.00346       \n",
+            "ile              0.00346       \n",
+            "feare            0.00346       \n",
+            "let              0.00346       \n",
+            "man              0.003361      \n",
+            "wife             0.003361      \n",
+            "night            0.003361      \n",
+            "banquo           0.003361      \n",
+            "well             0.003262      \n",
+            "know             0.003262      \n",
+            "one              0.003164      \n",
+            "great            0.003065      \n",
+            "see              0.003065      \n",
+            "may              0.003065      \n",
+            "exeunt           0.002966      \n",
+            "speake           0.002867      \n",
+            "sir              0.002867      \n",
+            "lenox            0.002768      \n",
+            "mine             0.00257       \n",
+            "vp               0.00257       \n",
+            "th               0.00257       \n",
+            "mal              0.002472      \n"
+          ]
+        }
+      ],
       "source": [
-        "total_word_count = None\n",
-        "macbeth_top_50 = None\n",
+        "total_word_count = sum(macbeth_stopped_freqdist.values())\n",
+        "macbeth_top_50 = macbeth_stopped_freqdist.most_common(50)\n",
         "print(f'{\"Word\":10} Normalized Frequency')\n",
         "for word in macbeth_top_50:\n",
-        "    normalized_frequency = None\n",
+        "    normalized_frequency = word[1] / total_word_count\n",
         "    print(f'{word[0]:10} {normalized_frequency:^20.4}')"
       ]
     },
@@ -490,46 +633,111 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "c_hHU9BYTya2"
       },
       "outputs": [],
       "source": [
-        "bigram_measures = None"
+        "bigram_measures = nltk.collocations.BigramAssocMeasures()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "gvzYGhxeTya2"
       },
       "outputs": [],
       "source": [
-        "macbeth_finder = None"
+        "macbeth_finder = BigramCollocationFinder.from_words(macbeth_words_stopped)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "0LZnE_IhTya2"
       },
       "outputs": [],
       "source": [
-        "macbeth_scored = None"
+        "macbeth_scored = macbeth_finder.score_ngrams(bigram_measures.raw_freq)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "fCA1d9bdTya3"
+        "id": "fCA1d9bdTya3",
+        "outputId": "f921389a-7fdd-42bf-e871-f762b4f8cbfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(('enter', 'macbeth'), 0.0015818091942659417),\n",
+              " (('exeunt', 'scena'), 0.0014829461196243204),\n",
+              " (('thane', 'cawdor'), 0.0012852199703410777),\n",
+              " (('knock', 'knock'), 0.0009886307464162135),\n",
+              " (('lord', 'macb'), 0.0008897676717745922),\n",
+              " (('thou', 'art'), 0.0008897676717745922),\n",
+              " (('good', 'lord'), 0.0007909045971329708),\n",
+              " (('haue', 'done'), 0.0007909045971329708),\n",
+              " (('macb', 'haue'), 0.0007909045971329708),\n",
+              " (('enter', 'lady'), 0.0006920415224913495),\n",
+              " (('let', 'vs'), 0.0006920415224913495),\n",
+              " (('macbeth', 'macb'), 0.0005931784478497281),\n",
+              " (('enter', 'malcolme'), 0.0004943153732081067),\n",
+              " (('enter', 'three'), 0.0004943153732081067),\n",
+              " (('euery', 'one'), 0.0004943153732081067),\n",
+              " (('macb', 'ile'), 0.0004943153732081067),\n",
+              " (('macb', 'thou'), 0.0004943153732081067),\n",
+              " (('make', 'vs'), 0.0004943153732081067),\n",
+              " (('mine', 'eyes'), 0.0004943153732081067),\n",
+              " (('mine', 'owne'), 0.0004943153732081067),\n",
+              " (('scena', 'secunda'), 0.0004943153732081067),\n",
+              " (('three', 'witches'), 0.0004943153732081067),\n",
+              " (('thy', 'selfe'), 0.0004943153732081067),\n",
+              " (('worthy', 'thane'), 0.0004943153732081067),\n",
+              " (('would', 'haue'), 0.0004943153732081067),\n",
+              " (('borne', 'woman'), 0.0003954522985664854),\n",
+              " (('come', 'come'), 0.0003954522985664854),\n",
+              " (('enter', 'banquo'), 0.0003954522985664854),\n",
+              " (('enter', 'king'), 0.0003954522985664854),\n",
+              " (('enter', 'macduffe'), 0.0003954522985664854),\n",
+              " (('enter', 'rosse'), 0.0003954522985664854),\n",
+              " (('haile', 'king'), 0.0003954522985664854),\n",
+              " (('haile', 'macbeth'), 0.0003954522985664854),\n",
+              " (('hath', 'made'), 0.0003954522985664854),\n",
+              " (('haue', 'seene'), 0.0003954522985664854),\n",
+              " (('macb', 'bring'), 0.0003954522985664854),\n",
+              " (('macbeth', 'macbeth'), 0.0003954522985664854),\n",
+              " (('malcolme', 'donalbaine'), 0.0003954522985664854),\n",
+              " (('old', 'man'), 0.0003954522985664854),\n",
+              " (('rosse', 'angus'), 0.0003954522985664854),\n",
+              " (('scena', 'prima'), 0.0003954522985664854),\n",
+              " (('see', 'thee'), 0.0003954522985664854),\n",
+              " (('shew', 'shew'), 0.0003954522985664854),\n",
+              " (('sir', 'macb'), 0.0003954522985664854),\n",
+              " (('ten', 'thousand'), 0.0003954522985664854),\n",
+              " (('tertia', 'enter'), 0.0003954522985664854),\n",
+              " (('thy', 'face'), 0.0003954522985664854),\n",
+              " (('woman', 'borne'), 0.0003954522985664854),\n",
+              " (('would', 'make'), 0.0003954522985664854),\n",
+              " (('alarums', 'enter'), 0.00029658922392486405)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
       "source": [
-        "# Display the first 50 elements of macbeth_scored\n"
+        "# Display the first 50 elements of macbeth_scored\n",
+        "macbeth_scored[:50]"
       ]
     },
     {
