--- a/index.ipynb
+++ b/index.ipynb
@@ -37,10 +37,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {
         "id": "vjShZQvFTyav",
-        "outputId": "76e859f7-5f65-4ae3-c551-95dec0eeb731",
+        "outputId": "76de53ef-2404-41bf-e114-a98d75b1bdc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -51,9 +51,9 @@
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package gutenberg to /root/nltk_data...\n",
-            "[nltk_data]   Package gutenberg is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/gutenberg.zip.\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         }
       ],
@@ -81,10 +81,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 2,
       "metadata": {
         "id": "leURneA8Tyaw",
-        "outputId": "335bd65d-ce67-4876-957b-6c12db69a6d4",
+        "outputId": "92e0ed05-6ff5-47d2-815c-b898298d0a8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -115,7 +115,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 2
         }
       ],
       "source": [
@@ -138,10 +138,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 3,
       "metadata": {
         "id": "dQnDnjImTyax",
-        "outputId": "41d6c18f-28b7-4285-d1d9-00ca2f3689f1",
+        "outputId": "b0ef4244-43ce-4190-900a-34a9f88c5a2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -233,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "AxIlhAPBTyay"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 5,
       "metadata": {
         "id": "MYXWaMkITyaz"
       },
@@ -281,10 +281,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "id": "5IjpKynPTya0",
-        "outputId": "0b47edcc-9e24-48e3-ea72-c98b00f536d7",
+        "outputId": "77862b07-1cd3-4996-e4bc-5bc9012dd913",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 6
         }
       ],
       "source": [
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 7,
       "metadata": {
         "id": "HFQ6xsUDTya1"
       },
@@ -403,10 +403,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {
         "id": "PIhYi3XVTya1",
-        "outputId": "8090f52f-29ac-4af5-bc43-9570f69a02f7",
+        "outputId": "b8a56b53-b88d-4f49-db69-0a074d73e148",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -469,7 +469,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 8
         }
       ],
       "source": [
@@ -498,10 +498,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 9,
       "metadata": {
         "id": "vw-Rx6HLTya2",
-        "outputId": "d5d96a10-0c2e-48ea-bb7c-f0b21d73a0d9",
+        "outputId": "a3e1fad3-005c-4edb-e2c1-b3cd31bb7ba4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -515,7 +515,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 9
         }
       ],
       "source": [
@@ -537,10 +537,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 10,
       "metadata": {
         "id": "giejZKseTya2",
-        "outputId": "bf5a89a8-3700-4f9d-bca7-4fc01418ac23",
+        "outputId": "81f7a443-f84d-40eb-93a2-c35cbd9df4a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 11,
       "metadata": {
         "id": "c_hHU9BYTya2"
       },
@@ -644,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 12,
       "metadata": {
         "id": "gvzYGhxeTya2"
       },
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 13,
       "metadata": {
         "id": "0LZnE_IhTya2"
       },
@@ -666,10 +666,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 14,
       "metadata": {
         "id": "fCA1d9bdTya3",
-        "outputId": "f921389a-7fdd-42bf-e871-f762b4f8cbfe",
+        "outputId": "bb17a253-4a20-488e-8740-445b2f6437a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -732,7 +732,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 14
         }
       ],
       "source": [
@@ -766,43 +766,86 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "FmIXl5hJTya3"
       },
       "outputs": [],
       "source": [
-        "macbeth_pmi_finder = None"
+        "macbeth_pmi_finder = BigramCollocationFinder.from_words(macbeth_words_stopped)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "ToCV0W08Tya3"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "macbeth_pmi_finder.apply_freq_filter(5)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "0mw44N3jTya4"
       },
       "outputs": [],
       "source": [
-        "macbeth_pmi_scored = None"
+        "macbeth_pmi_scored = macbeth_pmi_finder.score_ngrams(bigram_measures.pmi)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "S-WJSxMhTya4"
+        "id": "S-WJSxMhTya4",
+        "outputId": "6428ded9-0346-4faa-d6c4-8de21db3c56e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(('three', 'witches'), 8.925697076191916),\n",
+              " (('scena', 'secunda'), 8.844777080808347),\n",
+              " (('knock', 'knock'), 8.626136794333007),\n",
+              " (('thane', 'cawdor'), 7.968474805033251),\n",
+              " (('exeunt', 'scena'), 7.844777080808349),\n",
+              " (('mine', 'eyes'), 7.466265457554618),\n",
+              " (('worthy', 'thane'), 6.982280604558282),\n",
+              " (('mine', 'owne'), 6.8382342349415755),\n",
+              " (('euery', 'one'), 6.626136794333007),\n",
+              " (('thou', 'art'), 5.861265203596917),\n",
+              " (('enter', 'malcolme'), 5.58584707330729),\n",
+              " (('enter', 'three'), 5.58584707330729),\n",
+              " (('good', 'lord'), 5.441571341886851),\n",
+              " (('let', 'vs'), 5.2009208910336255),\n",
+              " (('enter', 'macbeth'), 5.010162386174146),\n",
+              " (('thy', 'selfe'), 4.689498855330436),\n",
+              " (('make', 'vs'), 4.596849567364762),\n",
+              " (('haue', 'done'), 4.244188344937793),\n",
+              " (('enter', 'lady'), 4.186751117897471),\n",
+              " (('lord', 'macb'), 4.128174104483845),\n",
+              " (('macb', 'ile'), 3.3988216944275145),\n",
+              " (('would', 'haue'), 3.140810605092483),\n",
+              " (('macbeth', 'macb'), 2.8369428068193994),\n",
+              " (('macb', 'haue'), 2.2754392789222333),\n",
+              " (('macb', 'thou'), 2.085161215523753)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
+      "source": [
+        "macbeth_pmi_scored[:50]"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -823,39 +866,157 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "B56dls2FTya4"
+        "id": "B56dls2FTya4",
+        "outputId": "5ad3685c-ed72-4f89-d806-43ff67f19936",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[Paradise Lost by John Milton 1667] \n",
+            " \n",
+            " \n",
+            "Book I \n",
+            " \n",
+            " \n",
+            "Of Man's first disobedience, and the fruit \n",
+            "Of that forbidden tree whose mortal taste \n",
+            "Brought death into the World, and all our woe, \n",
+            "With loss of Eden, till one greater Man \n",
+            "Restore us, and regain the blissful seat, \n",
+            "Sing, Heavenly Muse, that, on the secret top \n",
+            "Of Oreb, or of Sinai, didst inspire \n",
+            "That shepherd who first taught the chosen seed \n",
+            "In the beginning how the heavens and earth \n",
+            "Rose out of Chaos: or, if Sion hill \n",
+            "Delight thee more, and Siloa's brook that flowed \n",
+            "Fast by the oracle of God, I thence \n",
+            "Invoke thy aid to my adventurous song, \n",
+            "That with no middle flight intends to soar \n",
+            "Above th' Aonian mount, while it pursues \n",
+            "Things unattempted yet in prose or rhyme. \n",
+            "And chiefly thou, O Spirit, that dost prefer \n",
+            "Before all temples th' upright heart and pure, \n",
+            "Instruct me, for thou know'st; thou from the first \n",
+            "Wast present, and, with mighty wings outspread, \n",
+            "Dove-like sat'st brooding on the vast Abyss, \n",
+            "And mad'st it pregn\n"
+          ]
+        }
+      ],
+      "source": [
+        "milton_text = gutenberg.raw('milton-paradise.txt')\n",
+        "print(milton_text[:1000])"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "Oct5mXYyTya5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "pattern = \"([a-zA-Z]+(?:'[a-z]+)?)\"\n",
+        "milton_token = nltk.regexp_tokenize(milton_text, pattern = pattern)\n",
+        "milton_token = [w.lower() for w in milton_token]"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "91Y9d9iTTya5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "stopped_words = stopwords.words('english')\n",
+        "stopped_words += list(string.punctuation)\n",
+        "milton_token_stopped = [w for w in milton_token if w not in stopped_words]"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "IdhVhzfhTya5"
+        "id": "IdhVhzfhTya5",
+        "outputId": "251cd63f-b66e-40f4-f7ec-4c1865f09f9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "thou      : 0.009484916348307205\n",
+            "thy       : 0.009089711500461072\n",
+            "heaven    : 0.008035831906204716\n",
+            "thee      : 0.00786018530716199\n",
+            "thus      : 0.00698195231194836\n",
+            "shall     : 0.006213498441136433\n",
+            "god       : 0.005379177095683485\n",
+            "yet       : 0.005005928072717692\n",
+            "though    : 0.004764413999033944\n",
+            "earth     : 0.004544855750230536\n",
+            "us        : 0.004039871777982699\n",
+            "first     : 0.003842269354059632\n",
+            "man       : 0.00349097615597418\n",
+            "high      : 0.0033592412066921354\n",
+            "one       : 0.003117727133008387\n",
+            "far       : 0.002832301409563957\n",
+            "may       : 0.002766433934922935\n",
+            "great     : 0.0027005664602819126\n",
+            "death     : 0.0026566548105212313\n",
+            "till      : 0.0026346989856408905\n",
+            "like      : 0.002590787335880209\n",
+            "hell      : 0.0025468756861195276\n",
+            "hath      : 0.002481008211478505\n",
+            "day       : 0.0024590523865981647\n",
+            "stood     : 0.002415140736837483\n",
+            "whose     : 0.002393184911957142\n",
+            "might     : 0.0023492732621964605\n",
+            "things    : 0.0023053616124357793\n",
+            "good      : 0.0023053616124357793\n",
+            "light     : 0.0022834057875554385\n",
+            "night     : 0.0022614499626750976\n",
+            "world     : 0.0021736266631537347\n",
+            "love      : 0.0021736266631537347\n",
+            "eve       : 0.002151670838273394\n",
+            "adam      : 0.002063847538752031\n",
+            "air       : 0.00204189171387169\n",
+            "soon      : 0.0019979800641110085\n",
+            "fair      : 0.0019979800641110085\n",
+            "still     : 0.001976024239230668\n",
+            "ye        : 0.001976024239230668\n",
+            "son       : 0.0019540684143503273\n",
+            "life      : 0.0019540684143503273\n",
+            "long      : 0.0019101567645896456\n",
+            "let       : 0.0019101567645896456\n",
+            "know      : 0.001888200939709305\n",
+            "place     : 0.0018662451148289641\n",
+            "forth     : 0.0018662451148289641\n",
+            "less      : 0.001778421815307601\n",
+            "way       : 0.001778421815307601\n",
+            "power     : 0.0017564659904272604\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Normalized world frequency\n",
+        "milton_freq_dist = FreqDist(milton_token_stopped)\n",
+        "num_words_count = sum(milton_freq_dist.values())\n",
+        "top_50 = milton_freq_dist.most_common(50)\n",
+        "for word in top_50:\n",
+        "  print(f'{word[0]:10}: {word[1]/num_words_count}')"
+      ]
     },
     {
       "cell_type": "code",
